Separate Go and Hermes Relayer, test Hermes relayer config, WIP run-relayer.sh for Hermes is missing

--- a/tokentransfer/relayer_go/Dockerfile
+++ b/tokentransfer/relayer_go/Dockerfile
@@ -1,6 +1,6 @@
 # This Dockerfile will: 
-# set up a Golang environment(using Golang Docker Image)
-# and install Go Relayer
+# set up a Golang environment(using the Golang Docker Image)
+# and install the Go Relayer
 
 # Use Golang Docker Image
 FROM golang:1.18
