--- a/tokentransfer/tokentransfer.yml
+++ b/tokentransfer/tokentransfer.yml
@@ -7,33 +7,40 @@ services:
   checkersa:
     container_name: checkersa
     image: "checkersa"
-
     ports:
       - "26657:26657"
       - "1317:1317"
       - "4500:4500"
-
     networks:
       - tokendemo
 
   checkersb:
     container_name: checkersb
     image: "checkersb"
-
     ports:
       - "26658:26657"
       - "1318:26657"
       - "4501:26657"
-
     networks:
       - tokendemo
 
   relayer:
+    profiles: ["hermes"]
+    build: ./relayer_hermes
     container_name: relayer
-    image: "relayer"
+    image: "relayer_hermes"
     tty: true
     stdin_open: true
+    networks:
+      - tokendemo
 
+  relayer:
+    profiles: ["go"]
+    build: ./relayer_go
+    container_name: relayer
+    image: "relayer_go"
+    tty: true
+    stdin_open: true
     networks:
       - tokendemo
 
